--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
                 "@openui5/sap.uxap": "^1.73.2",
                 "@openui5/themelib_sap_belize": "^1.73.2",
                 "@openui5/themelib_sap_fiori_3": "^1.73.2",
+                "cors": "^2.8.5",
                 "shx": "^0.3.2"
         },
         "devDependencies": {
