--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -98,6 +98,13 @@
 					"target": [
 						"PurchaseOrder"
 					]
+				},
+				{
+					"name": "TransactionOrder",
+					"pattern": "TransactionOrder",
+					"target": [
+						"TransactionOrder"
+					]
 				}
 			],
 			"targets": {
@@ -120,6 +127,16 @@
 					"viewPath": "com.apptech.app-retention.view",
 					"viewType": "XML",
 					"viewName": "PurchaseOrder",
+					"parent": "Main",
+					"controlId": "pageContainer",
+					"controlAggregation": "pages",
+					"transition": "null",
+					"viewLevel": 3
+				},
+				"TransactionOrder": {
+					"viewPath": "com.apptech.app-retention.view",
+					"viewType": "XML",
+					"viewName": "TransactionOrder",
 					"parent": "Main",
 					"controlId": "pageContainer",
 					"controlAggregation": "pages",
