--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -105,6 +105,13 @@
 					"target": [
 						"TransactionOrder"
 					]
+				},
+				{
+					"name": "CreateUdtUdf",
+					"pattern": "CreateUdtUdf",
+					"target": [
+						"CreateUdtUdf"
+					]
 				}
 			],
 			"targets": {
@@ -137,6 +144,16 @@
 					"viewPath": "com.apptech.app-retention.view",
 					"viewType": "XML",
 					"viewName": "TransactionOrder",
+					"parent": "Main",
+					"controlId": "pageContainer",
+					"controlAggregation": "pages",
+					"transition": "null",
+					"viewLevel": 3
+				},
+				"CreateUdtUdf": {
+					"viewPath": "com.apptech.app-retention.view",
+					"viewType": "XML",
+					"viewName": "CreateUdtUdf",
 					"parent": "Main",
 					"controlId": "pageContainer",
 					"controlAggregation": "pages",
