--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
                 "node": "12.x.x"
         },
         "scripts": {
-                "start": "ui5 serve -o index.html -p 8081",
+                "start": "ui5 serve -o index.html",
                 "serve": "ui5 serve",
                 "test": "npm run lint && npm run karma",
                 "karma-ci": "karma start karma-ci.conf.js",
